--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hdkey": "^2.0.1",
     "next": "12.0.10",
     "react": "17.0.2",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
