--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-csv": "^2.2.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
