--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-csv": "^2.2.2",
     "react-dom": "17.0.2",
     "react-spinners": "^0.13.7",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "send-crypto": "^0.2.38"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.1",
